[gd_scene load_steps=7 format=2]

[ext_resource path="res://Entity/Placeholder/Creatures/LaCreatura/Neco.webp" type="Texture" id=1]
[ext_resource path="res://Entity/Placeholder/Creatures/LaCreatura/LaCreatura.gd" type="Script" id=2]
[ext_resource path="res://Entity/Placeholder/Creatures/LaCreatura/rat.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 18.2483

[sub_resource type="CircleShape2D" id=2]
radius = 336.656

[sub_resource type="CircleShape2D" id=3]
radius = 62.0725

[node name="LaCreatura" type="KinematicBody2D" groups=["Creatura", "Creature"]]
collision_layer = 3
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( -0.499999, -6.00001 )
scale = Vector2( 0.140728, 0.125837 )
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 1 )

[node name="Visualization" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="Panel" type="Panel" parent="Visualization"]
margin_left = -46.0
margin_top = -75.0
margin_right = 50.0
margin_bottom = -35.0

[node name="Label" type="Label" parent="Visualization/Panel"]
margin_right = 87.0
margin_bottom = 14.0
text = "Current state:"

[node name="state" type="Label" parent="Visualization/Panel"]
margin_top = 16.0
margin_right = 40.0
margin_bottom = 30.0

[node name="Panel2" type="Panel" parent="Visualization"]
margin_left = 54.0
margin_top = -33.0
margin_right = 156.0
margin_bottom = 4.0

[node name="Label" type="Label" parent="Visualization/Panel2"]
margin_right = 40.0
margin_bottom = 14.0
text = "Enemies:
Allies:"

[node name="Label2" type="Label" parent="Visualization/Panel2"]
margin_left = 62.0
margin_top = 1.0
margin_right = 102.0
margin_bottom = 15.0
text = "0"

[node name="Label3" type="Label" parent="Visualization/Panel2"]
margin_left = 62.0
margin_top = 19.0
margin_right = 102.0
margin_bottom = 33.0
text = "0"

[node name="EnableVisulization" type="Button" parent="."]
pause_mode = 2
self_modulate = Color( 1, 1, 1, 0.0313726 )
margin_left = -21.0
margin_top = -28.0
margin_right = 23.0
margin_bottom = 26.0
focus_mode = 0
enabled_focus_mode = 0

[node name="Detection" type="Area2D" parent="."]
collision_layer = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection"]
shape = SubResource( 2 )

[node name="HungerTimer" type="Timer" parent="."]
process_mode = 0
autostart = true

[node name="Interaction" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interaction"]
shape = SubResource( 3 )

[node name="ActionTimer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[connection signal="pressed" from="EnableVisulization" to="." method="_on_EnableVisulization_pressed"]
[connection signal="body_entered" from="Detection" to="." method="_on_Detection_body_entered"]
[connection signal="body_exited" from="Detection" to="." method="_on_Detection_body_exited"]
[connection signal="timeout" from="HungerTimer" to="." method="_on_HungerTimer_timeout"]
[connection signal="body_entered" from="Interaction" to="." method="_on_Interaction_body_entered"]
[connection signal="body_exited" from="Interaction" to="." method="_on_Interaction_body_exited"]
